  * Added class_name method to Element
  * Added wait_for_expected_title and expected_element_visible methods
  * Added select_text method to Element
  * Added ability for execute_scripts to accept arguments
  * Added ability to identify frame using a regular expression when using Watir
  * Added href method to Link
=== Version 1.1.8/2017-01-18
* Enhancements
  * Added ability to find elements using any valid attribute
  * Updated populate_page_with to also check if the element is visible prior to setting value
  * Added plural _elements methods for the following types:
    * area
    * canvas
    * audio
    * video
    * svg
  * Added basic element support for the following types:
    * as
    * blockquote
    * body
    * br
    * caption
    * col
    * colgroup
    * command
    * data
    * datalist
    * del
    * details
    * dialog
    * dl
    * embed
    * fieldset
    * head
    * hr
    * ins
    * keygen
    * legend
    * map
    * menu
    * meta
    * meter
    * object
    * optgroup
    * output
    * param
    * pre
    * progress
    * small
    * strong
    * style
    * time
    * title
    * track
* Fixes
  * Fixed issue when using the page and element accessors for html 5 elements
=== 2017-01-17
* Enhancements
  * Added :using_params parameter to both on_page and if_page methods
  * Fixed issue with generic element calls
  * Added support for the svg element
  * Support label locators on TextArea, SelectList, RadioButton and FileField
=== Version-1.1.7/2017-01-16
* Enhancements
  * Updated expected_element to use the global default element wait by default
  * Added scroll_into_view method to Element
  * Updated routes to accept more than two entries in the array which are passed as arguments
  * Added *_element and *_elements methods to Druid and Element for the following types
    * addr
    * address
    * article
    * aside
    * bdi
    * bdo
    * cite
    * code
    * dd
    * dfn
    * dt
    * em
    * figcaption
    * figure